--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <title>Smart Room Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
   </head>
   <body>
     <!-- Sidebar -->
@@ -60,6 +63,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- JavaScript -->
-    <script src="main.js"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
 </html>
